// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

import "api/esi/der_route.proto";

/**
 * A completed DER facility registration result.
 */
message DerFacilityRegistration {

  // The routing information.
  DerRoute route = 1;

  // Success flag.
  bool success = 2;

  // A token formed as SHA256(exchange_nonce + facility_nonce + UTF8(exchange_uid) 
  //                          + UTF8(facility_uid) + UTF8(facility_uri))
  //
  // The `exchange_nonce` was previously provided via the
  // `DerFacilityRegistrationFormDataReceipt` returned from a call to
  // `DerOperatorService.SubmitDerFacilityRegistrationForm()`. All other values
  // were previously provided on the `DerFacilityRegistrationFormData` passed to
  // that method.
  bytes registration_token = 3;

}
